--- a/story.html
+++ b/story.html
@@ -20,7 +20,7 @@
         document.getElementById('sentence1').textContent = firstSentence;
         
         // Use template literals with ${}
-        let secondSentence = `She ${action} a magical ${item}!`;
+        let secondSentence = `She ${found} a magical ${cellphone}!`;
         document.getElementById('sentence2').textContent = secondSentence;
     </script>
 </body>
