--- a/mccc herb garden/HerbGardenwebsite.html
+++ b/mccc herb garden/HerbGardenwebsite.html
@@ -249,7 +249,7 @@
                             <i class="fa-solid fa-location-dot mr-2"></i> Education Center
                         </div>
                         <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-herb-600 transition-colors">Monthly Member Meeting</h3>
-                        <p class="text-gray-600 mb-4 line-clamp-2">Join us for our regular monthly meeting. Guest speaker to be announced.</p>
+                        <p class="text-gray-600 mb-4 line-clamp-2">Join us f- or our regular monthly meeting. Guest speaker to be announced.</p>
                     </div>
                 </div>
 
